--- a/UpdateUbuntu.yaml
+++ b/UpdateUbuntu.yaml
@@ -1,8 +1,6 @@
 - name: Update Ubuntu
-  hosts: virtualmachines
+  hosts: newmachine
   tasks:
-   - name: Ping  hosts
-     ansible.builtin.ping:
    - name: Update apt cache
      become: true
      apt: update_cache=yes force_apt_get=yes
