--- a/ShopwareInstall.yaml
+++ b/ShopwareInstall.yaml
@@ -121,6 +121,7 @@
        name: Shopware
        state: present
      when: Migration == 'n'
+     no_log: true
    - name: Create Shopware db user
      mysql_user:
        login_user: root
@@ -131,12 +132,14 @@
          'Shopware.*': 'ALL,GRANT'
        state: present
      when: Migration == 'n'
+     no_log: true
    - name: Remove test database
      mysql_db:
        login_user: root
        login_password: '{{DbRootUserPass}}'
        name: test
        state: absent
+     no_log: true
 
    - name: Show migration warning
      ansible.builtin.debug:
